update JWT filter