@@ -1,5 +1,6 @@
 package app.ecommerce.config;
 
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -13,6 +14,7 @@ import org.springframework.security.config.annotation.authentication.configurers
 import org.springframework.security.config.annotation.web.HttpSecurityBuilder;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -25,16 +27,19 @@ import org.springframework.security.web.csrf.CsrfTokenRequestAttributeHandler;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.servlet.config.annotation.CorsRegistry;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurationSupport;
 
 import app.ecommerce.filter.JwtFilter;
 import app.ecommerce.point.AuthEntryPointJwt;
 
-import java.util.Arrays; 
+import java.util.Arrays;
+import java.util.List; 
 
 
 @Configuration
 @EnableWebSecurity
-public class WebSecurityConfig   {
+public class WebSecurityConfig    {
 
 	@Autowired
 	private  UserDetailsService userDetailsService;
@@ -43,22 +48,26 @@ public class WebSecurityConfig   {
 	private JwtFilter jwtFilter;
 	
 	  @Autowired
-	  private AuthEntryPointJwt unauthorizedHandler;
+	  private   AuthEntryPointJwt unauthorizedHandler;
+	  
+	  
 	
 	 @Bean
 	    public SecurityFilterChain configure(HttpSecurity http) throws Exception {
 	    	 http
-	    	    .csrf(csrf -> csrf.disable())
+	    	    .csrf(csrf -> csrf.disable())/*.cors(AbstractHttpConfigurer::disable)
+	    	    .cors(httpSecurityCorsConfigurer -> httpSecurityCorsConfigurer.configurationSource(corsConfigurationSource()))*/
 						/*
 						 .csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse())
 						 .csrfTokenRequestHandler(new CsrfTokenRequestAttributeHandler())*/
 						 .exceptionHandling(exception -> exception.authenticationEntryPoint(unauthorizedHandler))
 	        .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-	     .authorizeHttpRequests(auth -> auth.requestMatchers("connexion/a").permitAll()
+	     .authorizeHttpRequests(auth -> auth.requestMatchers("/connexion").permitAll()
 	        .anyRequest().authenticated());	
 	    
 	   http.authenticationProvider(authenticationProvider()); 
 
+	   
 	   http.addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 	  
 
@@ -97,15 +106,34 @@ public class WebSecurityConfig   {
 	  
 	 
 	  
-	  @Bean
-	  CorsConfigurationSource corsConfigurationSource() {
-	  	CorsConfiguration configuration = new CorsConfiguration();
+		/*
+		 * @Bean public CorsFilter corsFilter() { UrlBasedCorsConfigurationSource source
+		 * = new UrlBasedCorsConfigurationSource(); CorsConfiguration config = new
+		 * CorsConfiguration();
+		 * 
+		 * // Allow all origins, methods, and headers config.setAllowCredentials(true);
+		 * config.addAllowedOrigin("*"); config.addAllowedHeader("*");
+		 * config.addAllowedMethod("*");
+		 * 
+		 * source.registerCorsConfiguration("/connexion/**", config); // Adjust the path
+		 * as needed
+		 * 
+		 * return new CorsFilter(); }
+		 */
 	  
-	  	configuration.setAllowedMethods(Arrays.asList("GET","POST"));
-	  	UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-	  	source.registerCorsConfiguration("/**", configuration);
-	  	return source;
-	  }
+		/*
+		 * @Bean public CorsConfigurationSource corsConfigurationSource() {
+		 * CorsConfiguration corsConfiguration = new CorsConfiguration(); //Make the
+		 * below setting as * to allow connection from any hos
+		 * corsConfiguration.setAllowedOrigins(List.of("http://localhost:4200"));
+		 * corsConfiguration.setAllowedHeaders(Arrays.asList("Authorization",
+		 * "Content-Type")); corsConfiguration.setAllowCredentials(true);
+		 * corsConfiguration.setAllowedHeaders(List.of("*"));
+		 * corsConfiguration.setMaxAge(3600L); UrlBasedCorsConfigurationSource source =
+		 * new UrlBasedCorsConfigurationSource();
+		 * source.registerCorsConfiguration("/connexion/**", corsConfiguration); return
+		 * source; }
+		 */
+	
+	}
 
-
-}
